fetch exercise completed

--- a/exercises/fetch-exercise/index.html
+++ b/exercises/fetch-exercise/index.html
@@ -15,12 +15,14 @@
         margin: 0 50px;
         padding: 30px;
       }
+    
     </style>
   </head>
 
   <body>
     <h1>A greeting in a random language...</h1>
     <p id="greeting-text"></p>
+    <div id="greeting-language"></div>
 
     <script src="exercise.js"></script>
   </body>
